--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Weekly Web Dev 1 </title>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width">
 </head>
@@ -27,7 +28,7 @@
 						<input type="password" name="password" placeholder="Password" required>
 						<input type="password" name="password" placeholder="Confirm Password" required>
 						<input type="email" name="email" placeholder="E-mail" required>
-						<input list="location" name="location">
+						<input list="location" placeholder="Location" name="location">
 						  <datalist id="location">
 						    <option value="Lublin">
 						    <option value="Warszawa">
@@ -52,7 +53,7 @@
 				<form action="">
 					<input type="text" name="username" placeholder="Your Name" required>
 					<input type="email" name="email" placeholder="Your email" required>
-					<textarea class="textarea" placeholder="Type your message ..."></textarea>
+					<textarea class="textarea" maxlength="300" placeholder="Type your message ..."></textarea>
 				</form>
 			</div>
 			<div class="checkbox-wrapper">
